--- a/styles/nynm.css
+++ b/styles/nynm.css
@@ -63,3 +63,63 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 }
+.invite{
+    width: 95%;
+    height: 600px;
+    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(/images/Vectorrr.png);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#main-text{
+    color: #FFF;
+    font-family: Merriweather;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 900;
+    letter-spacing: 7.04px;
+
+}
+#sub-text{
+    color: rgba(255, 255, 255, 0.80);
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+#time-place{
+    width: 95%;
+    height: 600px;
+    background-color: pink;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 80px ;
+    
+}
+.time-place-text{
+    text-align: center;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px; /* 175% */
+    text-transform: capitalize;
+}
+#join-btn{
+    border-radius: 8px;
+    background: #F00;
+    text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+cursor: pointer;
+}
+#join-btn:hover{
+    background-color: brown;
+}
