--- a/styles/nynm.css
+++ b/styles/nynm.css
@@ -1,4 +1,4 @@
-/* common shared styles */
+
 .page{
     font-family: 'Inter', sans-serif;
     font-family: 'Merriweather', serif;
@@ -122,4 +122,56 @@ cursor: pointer;
 }
 #join-btn:hover{
     background-color: brown;
+}
+#email-form{
+    width: 95%;
+    height: 600px;
+    background: rgba(255, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 80px ;
+    
+}
+#ibox{
+    width: 648px;
+    height: 72px;
+
+}
+#sub{
+    width: 210px;
+    height: 75px;
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+}
+#form-title{
+    color: #070211;
+text-align: center;
+font-family: Merriweather;
+font-size: 48px;
+font-style: normal;
+font-weight: 900;
+line-height: normal;
+text-transform: capitalize;
+}
+#form-text{
+    color: rgba(7, 2, 17, 0.60);
+
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 32px;
+}
+.portfolio{
+    margin-top: 100px;
+}
+#grids{
+    width: 95%;
+    height: 600px;
+    display: flex;
+    flex-direction:column;
+    gap: 15px;
 }
