--- a/styles/nynm.css
+++ b/styles/nynm.css
@@ -123,6 +123,16 @@ cursor: pointer;
 #join-btn:hover{
     background-color: brown;
 }
+.portfolio{
+    margin-top: 100px;
+}
+#grids{
+    width: 95%;
+    height: 600px;
+    display: flex;
+    flex-direction:column;
+    gap: 15px;
+}
 #email-form{
     width: 95%;
     height: 600px;
@@ -131,7 +141,8 @@ cursor: pointer;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 80px ;
+    margin-top: 500px ;
+    border-radius: 16px;
     
 }
 #ibox{
@@ -164,14 +175,4 @@ font-size: 20px;
 font-style: normal;
 font-weight: 400;
 line-height: 32px;
-}
-.portfolio{
-    margin-top: 100px;
-}
-#grids{
-    width: 95%;
-    height: 600px;
-    display: flex;
-    flex-direction:column;
-    gap: 15px;
 }
