--- a/styles/nynm.css
+++ b/styles/nynm.css
@@ -70,6 +70,7 @@ line-height: normal;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-radius: 16px;
 }
 #main-text{
     color: #FFF;
@@ -97,6 +98,7 @@ line-height: normal;
     justify-content: center;
     flex-direction: column;
     margin-top: 80px ;
+    border-radius: 16px;
     
 }
 .time-place-text{
@@ -176,3 +178,4 @@ font-style: normal;
 font-weight: 400;
 line-height: 32px;
 }
+
